--- a/app/templates/auth/attendance.html
+++ b/app/templates/auth/attendance.html
@@ -82,6 +82,7 @@
                                 <div><strong>Students:</strong> ${d.students}</div>
                                 <div><strong>Exam Start:</strong> ${d.examStart}</div>
                                 <div><strong>Exam End:</strong> ${d.examEnd}</div>
+                                <div><strong>Exam Venue:</strong> ${d.examVenue}</div>
                             </td>
                             <td>
                                 <div><strong>Check-in:</strong> ${d.checkIn}</div>
