--- a/app/templates/auth/attendance.html
+++ b/app/templates/auth/attendance.html
@@ -88,7 +88,7 @@
                                 <div><strong>Check-in:</strong> ${d.checkIn}</div>
                                 <div><strong>Check-out:</strong> ${d.checkOut}</div>
                             </td>
-                            <td><span class="frame-${getRemarkClass(d.remark)}">[${d.remark}]</span></td>
+                            <td><span class="status frame-${getRemarkClass(d.remark)}">[${d.remark}]</span></td>
                         </tr>`;
                 } else {
                     resultSection.classList.add('hidden');
