--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -47,7 +47,13 @@
                     {% for exam in exams %}
                         <div class="exam-card" style="background-color: {% if exam.is_overnight %}#e3bded{% elif exam.status %}#b5deff{% else %}lightgrey{% endif %};">
                             <strong>{{ exam.course_code }} - [{{ exam.course_name }}]</strong><br>
-                            <i>Venue: {{ exam.venue }}</i><br>
+                            {% if exam.venue_availabilities %}
+                                {% for va in exam.venue_availabilities %}
+                                    <i>Venue: {{ va.venueNumber }} (Capacity Use: {{ va.capacity }})</i><br>
+                                {% endfor %}
+                            {% else %}
+                                <strong>: None</strong>
+                            {% endif %}
                             <i>Time: {{ exam.start_time.strftime("%H:%M") }} - {{ exam.end_time.strftime("%H:%M") }}</i>
                             {% if exam.is_overnight %}
                                 <span style="font-size: 12px; color: #700;"><strong>[Overnight]</strong></span>
