--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -47,8 +47,8 @@
                     {% for exam in exams %}
                         <div class="exam-card" style="background-color: {% if exam.is_overnight %}#e3bded{% elif exam.status %}#b5deff{% else %}lightgrey{% endif %};">
                             <strong>{{ exam.course_code }} - [{{ exam.course_name }}]</strong><br>
-                            {% if exam.venue_availabilities %}
-                                {% for va in exam.venue_availabilities %}
+                            {% if exam.venue %}
+                                {% for va in exam.venue %}
                                     <i>Venue: {{ va.venueNumber }} (Capacity Use: {{ va.capacity }})</i><br>
                                 {% endfor %}
                             {% else %}
