--- a/app/templates/user/userBase.html
+++ b/app/templates/user/userBase.html
@@ -21,7 +21,7 @@
                 {% elif user_level == 4 %} HOP
                 {% else %} Unknown
                 {% endif %} of {{ user_department }}
-            | <i><span class="user-info" id="current-datetime"></span></i>
+            | <span id="current-datetime"></span>
         </div>
     </header>
 
