--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -144,8 +144,7 @@
             <button type="submit" name="action" value="update" style="background-color: #d4edda; color: #155724;">
                 <i class="fas fa-check"></i> Update Exam
             </button>
-            <button type="submit" name="action" value="delete" style="background-color: #f8d7da; color: #721c24;"
-                    onclick="return confirm('Are you sure to delete this exam?')">
+            <button type="submit" name="action" value="delete" style="background-color: #f8d7da; color: #721c24;" onclick="return confirm('Are you sure to delete this exam?')">
                 <i class="fas fa-trash"></i> Delete Exam
             </button>
         </div>
